--- a/config/locales/games/_form.yml
+++ b/config/locales/games/_form.yml
@@ -2,3 +2,7 @@ fr:
   games:
     _form:
       actions_help: Un élément par ligne, c'est aussi simple que ça. Les actions sont distribuées au hasard mais tu peux les assigner individuellement par carte.
+en:
+  games:
+    _form:
+      actions_help: One item per row, it's that simple. The actions are distributed randomly but you can assign them individually per card.
