--- a/config/locales/games/index.yml
+++ b/config/locales/games/index.yml
@@ -2,7 +2,15 @@ fr:
   games:
     index:
       title: Mes parties
+      cards_done_count:
+        one: Mission effectuée
+        other: Missions effectuées
+      current_games: Les parties ou je participe
 en:
   games:
     index:
       title: My games
+      cards_done_count:
+        one: Mission done
+        other: Missions done
+      current_games: Game wherein I'm a player
