--- a/config/locales/players/destroy.yml
+++ b/config/locales/players/destroy.yml
@@ -2,7 +2,9 @@ fr:
   players:
     destroy:
       title: Supprimer le joueur
+      success: Le joueur a été retiré de la partie
 en:
   players:
     destroy:
       title: Delete player
+      success: Player was removed
