--- a/config/locales/pages/_how_does_it_work.yml
+++ b/config/locales/pages/_how_does_it_work.yml
@@ -2,31 +2,41 @@ fr:
   pages:
     _how_does_it_work:
       title: Cette application te simplifie la gestion d'une partie
-      i_made_it: J'ai créé cette application pour gérer une partie de Killer à plus de 60. Gérer la partie n'est pas une mince affaire!
+      i_made_it: J'ai créé cette application pour gérer une partie de Killer à plus de 60.
+      its_hard: Gérer la partie n'est pas une mince affaire! Connaître l'état de la partie en temps réel, distribuer les cartes à tout le monde, gérer les absents eet surtout, rendre ça fun.
       i_made_it_items:
         - connaître l'état de la partie, en temps réel
         - distribuer les cartes à tout le monde
         - gérer les absents
         - et surtout, rendre ça fun
-      this_app_allow_you_that: Cette application te permet de faire tout cela
-      steps:
-        create:
-          title: Tu crées ta partie
-        generate:
-          title: On génère la partie
-          description:
-            - L'algorithme génère des cartes pour faire en sorte que tous les adversaires puissent se rencontrer sans être bloqués.
-            - Quelqu'un ne pourra pas faire l'action qu'on lui a sélectionnée? Pas de problème, tu peux faire des modifications
-        print:
-          title: Tu imprimes tes cartes
-          description:
-            - Tu n'as plus qu'a imprimer, découper et distribuer les cartes.
-            - La carte contient un <strong>QR code</strong> qui permet de signaler que la mission a été réalisée et aussi d'avoir accès à des <strong>statistiques de la partie en temps réel</strong>.
-        monitor:
-          title: Tu surveilles la partie
-          description:
-            - Chaque joueur sait ce qu'il a à faire. Ton taff est fini.
-            - Un tableau de bord te permet de voir la partie et de marquer les cartes comme effectuées s'il y a des absents de dernière minute.
+      this_app_allow_you_that: Bref, cette application te permet de faire tout cela!
+      steps2:
+        - title: Tu crée ta partie
+          description: on te demande les participants et les actions qu'ils devront faire (pas de panique, on t'en propose plein)
+        - title: On génère la partie
+          description: l'application génère des cartes pour faire en sorte que tous les adversaires puissent se rencontrer sans être bloqués.
+        - title: Tu lances la partie
+          description: tous les participants reçoivent leur mission par mail. S'il effectue leur missions, il la marque comme effectuée reçoivent automatiquement la suivante.
+        - title: Et voilà
+          description: tu as accès à un tableau de bord de la partie en temps réel, tu sais qui est en train de gagner et qui a perdu
+      # steps:
+      #   create:
+      #     title: Tu crées ta partie
+      #   generate:
+      #     title: On génère la partie
+      #     description:
+      #       - L'algorithme génère des cartes pour faire en sorte que tous les adversaires puissent se rencontrer sans être bloqués.
+      #       - Quelqu'un ne pourra pas faire l'action qu'on lui a sélectionnée? Pas de problème, tu peux faire des modifications
+      #   print:
+      #     title: Tu imprimes tes cartes
+      #     description:
+      #       - Tu n'as plus qu'a imprimer, découper et distribuer les cartes.
+      #       - La carte contient un <strong>QR code</strong> qui permet de signaler que la mission a été réalisée et aussi d'avoir accès à des <strong>statistiques de la partie en temps réel</strong>.
+      #   monitor:
+      #     title: Tu surveilles la partie
+      #     description:
+      #       - Chaque joueur sait ce qu'il a à faire. Ton taff est fini.
+      #       - Un tableau de bord te permet de voir la partie et de marquer les cartes comme effectuées s'il y a des absents de dernière minute.
 en:
   pages:
     _how_does_it_work:
