add secret to players

--- a/config/locales/cards/_done_button.yml
+++ b/config/locales/cards/_done_button.yml
@@ -2,7 +2,9 @@ fr:
   cards:
     _done_button:
       disabled: Vous ne pouvez pas effectuer cette mission car le jeu n'a pas encore commencé.
+      secret_help: Le code se trouve sur la carte de ta cible. Il doit te le communiquer pour confirmer qu'il est mort.
 en:
   cards:
     _done_button:
       disabled: You can't mark this action as done until the game start.
+      secret_help: Le code se trouve sur la carte de ta cible. Il doit te le communiquer pour confirmer qu'il est mort.
