--- a/config/locales/cards_mailer/start.yml
+++ b/config/locales/cards_mailer/start.yml
@@ -1,4 +1,22 @@
 fr:
   cards_mailer:
     start:
-      title:
+      subject: Ta mission pour le jeu du Killer
+      information:
+        title: Voici les informations dont tu as besoin
+        action: ton action
+        target: ta cible
+        dashboard: Ton tableau de bord
+        secret: Ton secret
+        secret_help: Ton secret est a communiquer si tu te fais killer
+      footer: Si tu as la moindre question, consulte ton tableau de bord. Bonne chance.
+      game_started: La killer party %{link} a commencée 😱.
+      # your_mission: Ta mission
+      # card_description: >
+      #   Ta mission est de faire en sorte que %{target} effectue l'action suivante "%{action}".
+      # your_dashboard: A tout moment, tu peux
+      help: Comment ça marche?
+en:
+  cards_mailer:
+    start:
+      subject: You mission for the Killer party
