--- a/config/locales/games/_dashboard2.yml
+++ b/config/locales/games/_dashboard2.yml
@@ -7,6 +7,6 @@ fr:
 en:
   games:
     _dashboard2:
-      secret_tooltip: Ce code doit être communiqué par le joueur lorsqu'il est éliminé afin que l'adversaire puisse marquer sa mission comme terminée
+      secret_tooltip: This code must be communicated by the player when he is eliminated so that the opponent can mark his mission as completed.
       move_down: Move the player down
       move_up: Move the player up
