--- a/config/locales/shared/_faq_for_player.yml
+++ b/config/locales/shared/_faq_for_player.yml
@@ -45,32 +45,32 @@ en:
         what_are_the_rules:
           summary: 🤔 What are the rules?
           description:
-            - Les règles du jeu sont simples.
-            - Chaque participant doit remplir une mission. Celle-ci consistera simplement à mettre en défaut un autre candidat qui sera <i>“killed”</i>. A la différence près que chaque prédateur est également <strong>la cible d'un autre</strong>...
-            - <strong>Exemple:</strong><br/>Admettons qu'il y ait trois joueurs <strong>Alice, Bob et Marc</strong>. <strong>Alice</strong> devra “killer” <strong>Bob</strong> en accomplissant la mission qui lui est confiée par le maitre du jeu. Mais <strong>Alice</strong> sera également la "proie" de <strong>Marc</strong>, qui lui-même devra faire déjouer la mission de <strong>Bob</strong>. Si <strong>Alice</strong> “kill” <strong>Bob</strong>, elle communique sa mission à Bob après lui avoir chuchoté à l'oreille "Tu es mort" et lui demande sa carte.
+            - The rules of the game are simple.
+            - Every players need to accomplish a mission. This one will consist to make an another player do something. When this will be done, this player will be killed. However, the player must play carefully because he's also the target of an another player...
+            - <strong>Example:</strong><br/>Suppose there are three players <strong>Alice, Bob and Marc</strong>. <strong>Alice</strong> will have to “kill” <strong>Bob</strong> by accomplishing the mission entrusted to him by the game master. But <strong>Alice</strong> will also be the "prey" of <strong>Marc</strong>, who himself will have to thwart <strong>Bob</strong>'s mission. If <strong>Alice</strong> “kills” <strong>Bob</strong>, she communicates her mission to Bob after whispering in his ear "You're dead" and asks him for his card.
         i_dont_know_target:
-          summary: 😪 Je ne connais pas la personne
+          summary: 😪 I don't know the person
           description:
-            - Démerdes toi, c'est le jeu! 👹
-            - Essaie de glaner des informations, parle avec les gens et observe.
-            - Si tu n'y arrives toujours pas, demande à l'organisateur. Mais fais attention, tu risques de laisser des indices sur ton objectif...
+            - Work it out, it's the game! 👹
+            - Try to glean information, talk to people and observe.
+            - If you still can't, ask the organizer. But be careful, you might leave clues about your goal...
         he_guess_my_card:
-          summary: 🤬 On a deviné ma carte
+          summary: 🤬 My card was guessed
           description:
-            - T'es niqué et tu ne pourras probablement jamais réaliser ta mission... Désolé.
-            - Essaie de t'y prendre autrement et de te faire aider pour réaliser ton objectif.
+            - You're screwed and you'll probably never be able to carry out your mission... Sorry.
+              - Try to do it differently and get help to achieve your goal.
         he_is_not_there:
-          summary: 👻 La personne n'est pas là
+          summary: 👻 The player is not here
           description:
-            - Attends un peu pour être sûr.
-            - Si elle n'est toujours pas là, l'organisateur te donnera sa carte.
+            - Wait a bit to be sure.
+            - If she is still not there, the organizer will give you her card.
         i_m_dead:
-          summary: 💀 Je suis mort
+          summary: 💀 I am dead
           description:
-            - Evite de le dire à tout le monde pour continuer à laisser planer le doute.
-            - Maintenant, ton objectif est d'aider d'autres personnes à réaliser leur mission.
+            - Avoid telling everyone to continue to leave doubt.
+            - Now your goal is to help other people achieve their mission.
         thats_impossible:
-          summary: 😱 Ma mission est trop dure
+          summary: 😱 My mission is too hard
           description:
-            - Pas de panique, tu peux prendre ton temps pour la réaliser.
-            - Tu peux aussi élaborer des plans et t'y prendre à plusieurs pour réaliser ton objectif.
+            - Don't panic, you can take your time to make it.
+            - You can also make plans and work together to achieve your goal.
