--- a/config/locales/games/_dashboard.yml
+++ b/config/locales/games/_dashboard.yml
@@ -11,10 +11,11 @@ fr:
 fr:
   games:
     _dashboard:
-      title: 🚧 Partie en cours
-      description: Tu participes actuellement à une partie.
-      game_link: 📊 Voir la partie en cours "%{name}"
+      title: 🚧 Party in progress
+      description: You are participating to a party.
+      game_link: 📊 See the current party "%{name}"
       card_link: >
-        🎯 Carte #%{index} %{status}
-      there_is_x_players_alive: Actuellement, il ne reste que %{remaining_player} joueurs sur les %{count}. 😱
-      all_players_are_alive: Les %{count} joueurs sont en vie. Dépêche toi de remplir ta mission.
+        🎯 Card #%{index} %{status}
+      there_is_x_players_alive: There is %{remaining_player} / %{count} remaining players. 😱
+      all_players_are_alive: >
+        %{count} players are alive. Hurry up to finish your mission.
