--- a/config/locales/pages/actions.yml
+++ b/config/locales/pages/actions.yml
@@ -6,5 +6,5 @@ fr:
 en:
   pages:
     actions:
-      title: Liste d'actions pour une partie de Killer
-      found_actions_is_not_easy: Trouver des idées d'actions n'est pas facile.
+      title: Action list for a game of Killer
+      found_actions_is_not_easy: Finding ideas for action is not easy.
