--- a/config/locales/layout/_footer.yml
+++ b/config/locales/layout/_footer.yml
@@ -4,7 +4,7 @@ fr:
       sitemap: Plan du site
       cookieless: Ce site ne vous piste pas, il n'y a pas de cookies ni de google analytics.
       external:
-        title: Lien externes
+        title: Liens externes
         github: Code source (Github)
         me: A propos de moi
 en:
