--- a/config/locales/pages/home.yml
+++ b/config/locales/pages/home.yml
@@ -3,14 +3,14 @@ fr:
     home:
       title: Organise tes killer party
       title_small: (super facilement)
-      you_are_on_the_right_place: Tu organise un événement et tu veux que tout le monde apprenne à se connaître? Tu es au bon endroit!
+      you_are_on_the_right_place: Tu organises un événement et tu veux que tout le monde apprenne à se connaître? Tu es au bon endroit!
       balloons_example:
         - Hello, tu peux me montrer comment tu fais le moonwalk? 🤔
         - Oui bien sûr! Mate ça! 🕺
-        - Trop cool! Donnes ta carte 😈
+        - Trop cool! Donne ta carte 😈
         - LOL 😐
       h2_what_is_the_killer: C'est quoi le jeu du killer ?
-      h2_pricing: OK, OK, mais combien ça coute?
+      h2_pricing: OK, OK, mais combien ça coûte?
 
 en:
   pages:
