--- a/config/locales/games/new.yml
+++ b/config/locales/games/new.yml
@@ -2,7 +2,7 @@ fr:
   games:
     new:
       title: Créer une partie
-      intro: Tu es en train de créer ta partie. Remplis simplement les actions qui seront distribuées aléatoirement. On te demandera d'ajouter les joueurs après.
+      intro: Tu es en train de créer ta partie. Rempli simplement les actions qui seront distribuées aléatoirement. On te demandera d'ajouter les joueurs après.
 en:
   games:
     new:
