--- a/config/locales/pages/_how_does_it_work.yml
+++ b/config/locales/pages/_how_does_it_work.yml
@@ -3,21 +3,21 @@ fr:
     _how_does_it_work:
       title: Cette application te simplifie la gestion d'une partie
       i_made_it: J'ai créé cette application pour gérer une partie de Killer à plus de 60.
-      its_hard: Gérer la partie n'est pas une mince affaire! Connaître l'état de la partie en temps réel, distribuer les cartes à tout le monde, gérer les absents eet surtout, rendre ça fun.
+      its_hard: Gérer la partie n'est pas une mince affaire! Connaître l'état de la partie en temps réel, distribuer les cartes à tout le monde, gérer les absents et surtout, rendre ça fun.
       this_app_allow_you_that: Cette application te permet de faire tout cela.
       how_does_it_work: Comment ça marche?
       steps:
-        - title: Tu crée ta partie
-          description: on te demande les participants et les actions qu'ils devront faire (pas de panique, on t'en propose plein)
+        - title: Tu crées ta partie
+          description: On te demande les participants et les actions qu'ils devront faire (pas de panique, on t'en propose plein)
           icon: 📝
         - title: On génère la partie
-          description: l'application génère des cartes pour faire en sorte que tous les adversaires puissent se rencontrer sans être bloqués.
+          description: L'application génère des cartes pour faire en sorte que tous les adversaires puissent se rencontrer sans être bloqués.
           icon: 🪄
         - title: Tu lances la partie
-          description: tous les participants reçoivent leur mission par mail. Ils ont accès à un tableau de bord avec l'état de la partie.
+          description: Tous les participants reçoivent leur mission par mail. Ils ont accès à un tableau de bord avec l'état de la partie.
           icon: 🏁
         - title: Et voilà
-          description: tu as accès à un tableau de bord de la partie en temps réel, tu sais qui est en train de gagner et qui a perdu
+          description: Tu as accès à un tableau de bord de la partie en temps réel, tu sais qui est en train de gagner et qui a perdu
           icon: 🚬
 en:
   pages:
