--- a/config/locales/pages/help.yml
+++ b/config/locales/pages/help.yml
@@ -3,7 +3,7 @@ fr:
     help:
       title: Comment fonctionne le jeu du killer?
       intro: >
-        Le "killer" est un jeu dans lequel tu devras faire preuve de créativité et mettre en place divers stratagèmes pour tenter d'éliminer un à un les autres participants tout en protégeant leur propre vie.
+        Le "killer" est un jeu dans lequel tu devras faire preuve de créativité et mettre en place divers stratagèmes pour tenter d'éliminer un à un les autres participants tout en protégeant ta propre vie.
       h2_example: Exemple concret
 en:
   pages:
