--- a/config/locales/players/update.yml
+++ b/config/locales/players/update.yml
@@ -1,7 +1,7 @@
 fr:
   players:
     update:
-      success: Le participant a été mise à jour
+      success: Le participant a été mis à jour
 en:
   players:
     update:
