--- a/config/locales/global.yml
+++ b/config/locales/global.yml
@@ -29,6 +29,11 @@ fr:
       %{player} va accomplir son objectif et faire effectuer l'action "%{action}" à %{target}.
 
   game:
+    tags:
+      wedding: Mariage
+      birthday: Anniversaire
+      workshop: Séminaire
+      kids: Colonie
     kill_words:
       - s'est fait démonter
       - s'est fait monter en l'air
@@ -51,47 +56,47 @@ fr:
         - Bob, il a toujours un verre de pastis à la main
         - Marc, Un mec qui fume beaucoup
       actions:
-        - boire un shooter 🥃
-        - boire un cul-sec 🥃
-        - danser sur une table 💃
-        - dire une phrase en anglais (ou autre langue étrangère) 🇬🇧
-        - dire une phrase en italien 🇮🇹
-        - danser un moonwalk 🕺
-        - danser chorégraphier la danse de Rabbi Jacob 🎩
-        - faire au moins trois jongles avec un balloon (ou tout autre objets) ⚽
-        - faire une "ola" 🙌
-        - exécuter les pas d'un madison ou d'un Kuduro 🕺
-        - trinquer avec une personne qui lui est parfaitement inconnue 👬
-        - faire un selfie avec toi 🤳
-        - faire finir au moins 5 de tes phrases 🦜
-        - faire 3 fois le tour de la même table en moins de 5min ⏱
-        - prêter son téléphone 📱
-        - servir un truc à manger ou à boire 🥨
-        - raconter une blague 🤡
-        - découvrir quel est son livre préféré 📕
-        - chanter 🎙
-        - obtenir une question à propos de ta passion pour les chaussettes 🧦
-        - obtenir une question à propos de ta collection de tickets de métro 🛂
-        - obtenir une question à propos de ta passion les chèvres 🐐
-        - dire une réplique d'OSS 117 (comment est votre blanquette?) 🎥
-        - dire une réplique de la Cité de la Peur (Prenez un chewing-gum Emile) 🎥
-        - nettoyer quelque chose 🧽
-        - fouiller les cheveux à la recherche d'un insecte 🐜
-        - dire le prénom de ses parents 🧓
-        - imiter un autre joueur 🦜
-        - porter son verre pendant qu'on parle 🤵
-        - complimenter sur toi 😳
-        - préparer un cocktail 🤵
-        - ranger quelque chose dans la pièce 🧽
-        - faire bailler 😪
-        - faire écouter du Jul 👆
-        - décapsuler une bière 🍺
-        - trinquer avec toi 🍻
-        - lui servir sa boisson préférée 🥃
-        - le présenter à quelqu'un qu'il ne connaît pas 👋
-        - faire goûter une boisson qu'il n'aime pas 👬
-        - lâcher un pas de danse 🕺
-        - faire sonner ton téléphone 📱
+        - 🥃 boire un shooter
+        - 🥃 boire un cul-sec
+        - 💃 danser sur une table
+        - 🇬🇧 dire une phrase en anglais (ou autre langue étrangère)
+        - 🇮🇹 dire une phrase en italien
+        - 🕺 danser un moonwalk
+        - 🎩 danser chorégraphier la danse de Rabbi Jacob
+        - ⚽ faire au moins trois jongles avec un balloon (ou tout autre objets)
+        - 🙌 faire une "ola"
+        - 🕺 exécuter les pas d'un madison ou d'un Kuduro
+        - 👬 trinquer avec une personne qui lui est parfaitement inconnue
+        - 🤳 faire un selfie avec toi
+        - 🦜 faire finir au moins 5 de tes phrases
+        - ⏱ faire 3 fois le tour de la même table en moins de 5mi
+        - 📱 prêter son téléphone
+        - 🥨 servir un truc à manger ou à boire
+        - 🤡 raconter une blague
+        - 📕 découvrir quel est son livre préféré
+        - 🎙 chanter
+        - 🧦 obtenir une question à propos de ta passion pour les chaussettes
+        - 🛂 obtenir une question à propos de ta collection de tickets de métro
+        - 🐐 obtenir une question à propos de ta passion les chèvres
+        - 🎥 dire une réplique d'OSS 117 (comment est votre blanquette?)
+        - 🎥 dire une réplique de la Cité de la Peur (Prenez un chewing-gum Emile)
+        - 🧽 nettoyer quelque chose
+        - 🐜 fouiller les cheveux à la recherche d'un insecte
+        - 🧓 dire le prénom de ses parents
+        - 🦜 imiter un autre joueur
+        - 🤵 porter son verre pendant qu'on parle
+        - 😳 complimenter sur toi
+        - 🤵 préparer un cocktail
+        - 🧽 ranger quelque chose dans la pièce
+        - 😪 faire bailler
+        - 👆 faire écouter du Jul
+        - 🍺 décapsuler une bière
+        - 🍻 trinquer avec toi
+        - 🥃 lui servir sa boisson préférée
+        - 👋 le présenter à quelqu'un qu'il ne connaît pas
+        - 👬 faire goûter une boisson qu'il n'aime pas
+        - 🕺 lâcher un pas de danse
+        - 📱 faire sonner ton téléphone
 en:
   application_name: Killer game
   french_version: 🇫🇷 Version française
@@ -122,6 +127,11 @@ en:
       %{player} will accomplish his mission and make his target %{target} do "%{action}".
 
   game:
+    tags:
+      wedding: Wedding
+      birthday: Birthday
+      workshop: Workshop
+      kids: Kids
     kill_words:
       - got dismantled
       - got a ride
@@ -144,43 +154,43 @@ en:
         - Bob, il a toujours un verre de pastis à la main
         - Marc, Un mec qui fume beaucoup
       actions:
-        - drink a shot 🥃
-        - dance on a table 💃
-        - say a sentence in English (or other foreign language) 🇬🇧
-        - say a sentence in Italian 🇮🇹
-        - dance a moonwalk 🕺
-        - dance choreograph the dance of Rabbi Jacob 🎩
-        - do at least three juggles with a balloon (or any other object) ⚽
-        - do an "ola" 🙌
-        - perform the steps to a madison or kuduro 🕺
-        - toast with someone who is a complete stranger to her 👬
-        - take a selfie with you 🤳
-        - get at least 5 of your sentences finished 🦜
-        - go around the same table 3 times in less than 5min ⏱
-        - lend your phone 📱
-        - serve something to eat or drink 🥨
-        - tell a joke 🤡
-        - find out what his favorite book is 📕
-        - singing 🎙
-        - get a question about your passion for socks 🧦
-        - get a question about your subway ticket collection 🛂
-        - get a question about your passion goats 🐐
-        - say a line from OSS 117 (how is your blanquette?) 🎥
-        - say a line from City of Fear (Have a piece of gum Emile) 🎥
-        - clean something 🧽
-        - rummage through your hair looking for a bug 🐜
-        - say your parents' names 🧓
-        - imitate another player 🦜
-        - carry your drink while talking 🤵
-        - complimenting you 😳
-        - make a cocktail 🤵
-        - put something away in the room 🧽
-        - make you yawn 😪
-        - play some Jul 👆
-        - Uncork a beer 🍺
-        - Toast with you 🍻
-        - Serve him his favorite drink 🥃
-        - introduce him to someone he doesn't know 👋
-        - give him a taste of a drink he doesn't like 👬
-        - drop a dance step 🕺
-        - make your phone ring
+        - 🥃 drink a shot
+        - 💃 dance on a table
+        - 🇬🇧 say a sentence in English (or other foreign language)
+        - 🇮🇹 say a sentence in Italian
+        - 🕺 dance a moonwalk
+        - 🎩 dance choreograph the dance of Rabbi Jacob
+        - ⚽ do at least three juggles with a balloon (or any other object)
+        - 🙌 do an "ola"
+        - 🕺 perform the steps to a madison or kuduro
+        - 👬 toast with someone who is a complete stranger to her
+        - 🤳 take a selfie with you
+        - 🦜 get at least 5 of your sentences finished
+        - ⏱ go around the same table 3 times in less than 5min
+        - 📱 lend your phone
+        - 🥨 serve something to eat or drink
+        - 🤡 tell a joke
+        - 📕 find out what his favorite book is
+        - 🎙 singing
+        - 🧦 get a question about your passion for socks
+        - 🛂 get a question about your subway ticket collection
+        - 🐐 get a question about your passion goats
+        - 🎥 say a line from OSS 117 (how is your blanquette?)
+        - 🎥 say a line from City of Fear (Have a piece of gum Emile)
+        - 🧽 clean something
+        - 🐜 rummage through your hair looking for a bug
+        - 🧓 say your parents' names
+        - 🦜 imitate another player
+        - 🤵 carry your drink while talking
+        - 😳 complimenting you
+        - 🤵 make a cocktail
+        - 🧽 put something away in the room
+        - 😪 make you yawn
+        - 👆 play some Jul
+        - 🍺 Uncork a beer
+        - 🍻 Toast with you
+        - 🥃 Serve him his favorite drink
+        - 👋 introduce him to someone he doesn't know
+        - 👬 give him a taste of a drink he doesn't like
+        - 🕺 drop a dance step
+        - 📱 make your phone ring
