--- a/config/locales/pages/actions.yml
+++ b/config/locales/pages/actions.yml
@@ -2,9 +2,11 @@ fr:
   pages:
     actions:
       title: Liste d'actions pour une partie de Killer
+      title_for: Liste d'actions pour %{tag}
       found_actions_is_not_easy: Trouver des idées d'actions n'est pas facile.
 en:
   pages:
     actions:
       title: Action list for a game of Killer
+      title_for: Action list for %{tag}
       found_actions_is_not_easy: Finding ideas for action is not easy.
